--- a/DequesRandomizedQueues/bin/.gitignore
+++ b/DequesRandomizedQueues/bin/.gitignore
@@ -1,6 +1,1 @@
-/Deque$1.class
-/Deque$Node.class
-/Deque.class
-/RandomizedQueue$Node.class
-/RandomizedQueue.class
-/Test.class
+/RandomizedQueue$1.class
