--- a/CollinearPoints/bin/.gitignore
+++ b/CollinearPoints/bin/.gitignore
@@ -1,11 +1,2 @@
-/BruteCollinearPoints.class
-/FastCollinearPoints.class
-/LineSegment.class
-/Point$1.class
-/Point.class
-/Test.class
-/RoroPoint.class
-/RoroPoint$BySlopeOrder.class
-/Prueba.class
-/BruteCollinearPoints$line.class
-/BruteCollinearPoints$Line.class
+/Line.class
+/FastCollinearPoints$Line.class
