--- a/CollinearPoints/bin/.gitignore
+++ b/CollinearPoints/bin/.gitignore
@@ -1,2 +1,6 @@
-/Line.class
-/FastCollinearPoints$Line.class
+/FOldastCollinearPoints$Line.class
+/FOldastCollinearPoints.class
+/OldastCollinearPoints$Line.class
+/OldastCollinearPoints.class
+/OldFastCollinearPoints$Line.class
+/OldFastCollinearPoints.class
